# XpensLens

./: README.MD  cursorrules  index.html  tsconfig.app.tsbuildinfo
backend/: README.md  inspect_users_schema.py  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py
backend/app/integrations/ai/: vision_client.py
backend/app/models/: expense.py  user.py
backend/app/repositories/: expense_repository.py  user_repository.py
backend/app/routes/: auth.py  expenses.py
backend/app/schemas/: auth.py  expense.py
backend/app/services/: auth_service.py  expense_service.py  policy_engine.py
docs/: prd.md
src/: App.css  App.tsx  index.css
src/components/admin/: AdminDashboard.tsx  AllExpensesView.tsx  ManualReviewInbox.tsx  PolicyEngine.tsx
src/components/auth/: AuthPage.tsx
src/components/employee/: EmployeeDashboard.tsx  ExpensesList.tsx  UploadExpenseModal.tsx
src/components/layout/: AppLayout.tsx  Navbar.tsx  Sidebar.tsx
src/components/shared/: SettingsPage.tsx  StatusBadge.tsx
src/contexts/: AppContext.tsx
src/data/: mockData.ts
src/i18n/: translations.ts
src/lib/: api-client.ts  expenses-api.ts
